tests/semantic_cases/invalid/duplicate_type_decl.ob0
(* INVALID: TYPE alias is redeclared in the same module scope *)
MODULE Main;
TYPE Count = INTEGER;
TYPE Count = INTEGER;
BEGIN
END Main.
